views/css/front.css
/* ... */
.oneyPopin_option[data-type="3x"] ul li:last-child {
  padding: 21px 0 4px;
}
.oneyPopin_legal {
  border-top: 1px solid #7ebd00;
  display: block;
  font-size: 10px;
  line-height: 1.2em;
  color: #8a8a8a;
  padding: 8px 0 0;
  white-space: normal;
}
@media (max-width: 767px) {
  .oneyPopin_legal {
    padding: 0 0 15px;
  }
}
.oneyPopin_close {
  display: block;
  position: absolute;
  top: 15px;
  right: 15px;
  width: 24px;
  height: 24px;
  line-height: 24px;
  text-indent: 24px;
  background: none;
  border: none;
  overflow: hidden;
  padding: 0;
  cursor: pointer;
}
.oneyPopin_close:focus {
  outline: 0;
}
.oneyPopin_close:before,
.oneyPopin_close:after {
  display: block;
  position: absolute;
  top: 50%;
  left: 50%;
  width: 100%;
  height: 2px;
  content: "";
  background: #7ebd00;
}
.oneyPopin_close:before {
  -webkit-transform: translate(-50%, -50%) rotate(45deg);
  -moz-transform: translate(-50%, -50%) rotate(45deg);
  -ms-transform: translate(-50%, -50%) rotate(45deg);
  -o-transform: translate(-50%, -50%) rotate(45deg);
  transform: translate(-50%, -50%) rotate(45deg);
}
.oneyPopin_close:after {
  -webkit-transform: translate(-50%, -50%) rotate(-45deg);
  -moz-transform: translate(-50%, -50%) rotate(-45deg);
  -ms-transform: translate(-50%, -50%) rotate(-45deg);
  -o-transform: translate(-50%, -50%) rotate(-45deg);
  transform: translate(-50%, -50%) rotate(-45deg);
}
.oneyPopin_error {
  margin: 0;
  font-size: 14px;
  font-style: italic;
  font-weight: 400;
  white-space: normal;
}
/* Oney Form */
.oneyRequired {
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-direction: column;
  flex-wrap: wrap;
  background: transparent;
  font-size: 15px;
  padding: 0;
  width: 100%;
}
@media (max-width: 767px) {
  .oneyRequired {
    width: calc(100vw - 30px);
    max-width: 100%;
  }
}
.oneyRequired:focus {
  outline: 0;
}
.oneyRequired_overlay {
  -webkit-transition: max-height 0.4s;
  -moz-transition: max-height 0.4s;
  -ms-transition: max-height 0.4s;
  -o-transition: max-height 0.4s;
  transition: max-height 0.4s;
  background: transparent;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  overflow: hidden;
  padding: 0 16px;
  max-height: 0;
}
.oneyRequired_overlay.-show {
  max-height: 10000vh;
}
.oneyRequired_wrapper {
  position: relative;
  padding: 24px 0 0;
}
.oneyRequired_wrapper:before {
  border-top: 1px solid #7ebd00;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  -o-transform: translateX(-50%);
  transform: translateX(-50%);
  content: "";
  position: absolute;
  top: 0;
  left: 50%;
  height: 0;
  width: 150px;
}
.oneyRequired_close {
  display: block;
  width: 100px;
  height: 24px;
  line-height: 24px;
  background: none;
  border: none;
  text-align: center;
  color: #7ebd00;
  margin: 0 0 15px;
  cursor: pointer;
}
.oneyRequired_close:focus {
  outline: 0;
}
.oneyRequired_close.-button {
  -webkit-border-radius: 2px;
  -moz-border-radius: 2px;
  border-radius: 2px;
  background: #7ebd00;
  width: auto;
  height: 32px;
  padding: 0 16px;
  color: #fff;
  border: none;
  font-size: 15px;
  outline: none;
  margin: 15px 0 0;
  cursor: pointer;
}
.oneyRequired_title {
  display: block;
  padding: 8px 0 16px;
  color: #7ebd00;
  font-size: 14px;
  text-transform: uppercase;
}
.oneyRequired_content {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  position: relative;
  width: 100%;
}
.oneyRequired_fieldset {
  display: flex;
  flex-direction: column;
  width: 100%;
  position: relative;
  max-width: calc(50% - 30px);
  padding: 0 15px;
  margin: 0 0 15px;
}
.oneyRequired_fieldset.-same {
  margin: auto;
  max-width: 100%;
}
@media (max-width: 767px) {
  .oneyRequired_fieldset {
    max-width: 100%;
  }
}
@media (max-width: 767px) {
  .payplugPopin .oneyRequired_fieldset {
    padding: 16px 0 0;
  }
}
.oneyRequired_sectionName {
  margin: 0 0 4px;
  font-size: 15px;
  color: #00ab7a;
  text-align: center;
}
.oneyRequired_group {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
}
.oneyRequired_group p {
  width: 100%;
  font-weight: 400;
  font-size: 12px;
  margin: 0 0 3px;
}
.oneyRequired_group + .oneyRequired_group {
  margin: 10px 0 0;
}
.oneyRequired_field {
  width: 100%;
}
.oneyRequired_field.-firstname,
.oneyRequired_field.-lastname,
.oneyRequired_field.-postcode,
.oneyRequired_field.-city {
  width: calc(50% - 2.5px);
}
.oneyRequired_input {
  border: 1px solid #b2b2b2;
  -webkit-border-radius: 2px;
  -moz-border-radius: 2px;
  border-radius: 2px;
  font-size: 12px;
  padding: 0 8px;
  margin: 0 0 5px;
  width: 100%;
  height: 36px;
}
.oneyRequired_input.-error {
  border: 1px solid #e56876;
}
.oneyRequired_validate {
  display: flex;
  justify-content: center;
  width: 100%;
}
.oneyRequired_button {
  -webkit-border-radius: 2px;
  -moz-border-radius: 2px;
  border-radius: 2px;
  background: #7ebd00;
  width: 200px;
  height: 50px;
  color: #fff;
  border: none;
  font-size: 15px;
  margin: 10px 0;
  cursor: pointer;
}
.oneyRequired_submit {
  -webkit-border-radius: 2px;
  -moz-border-radius: 2px;
  border-radius: 2px;
  background: #7ebd00;
  width: 200px;
  height: 50px;
  color: #fff;
  border: none;
  font-size: 15px;
  margin: 16px 0 8px;
  outline: none;
}
.oneyRequired_message {
  text-align: center;
  font-size: 13px;
  margin: 10px 0 0;
  display: none;
}
.oneyRequired_message.-error {
  display: block;
  color: #e56876;
}
.oneyRequired_message.-success {
  display: block;
  color: #00ab7a;
}
.oneyRequired_validation {
  -webkit-transition: opacity 0.4s;
  -moz-transition: opacity 0.4s;
  -ms-transition: opacity 0.4s;
  -o-transition: opacity 0.4s;
  transition: opacity 0.4s;
  opacity: 0;
  position: absolute;
  display: none;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: #fff;
}
/* ... */

